# rust-crud

./: Cargo.toml  Dockerfile  README.md
sql/: create_database.sql
src/: main.rs
src/api/: post.rs  user.rs
src/errors/: user_error.rs
src/model/: mod.rs  post.rs  post_user.rs  user.rs
