[package]
name = "rust-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { git = "https://github.com/actix/actix-web", tag = "web-v4.3.1", version = "4.3.1" }
derive_more = "0.99.17"
mysql = "24.0.0"
serde = "1.0.183"
